CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(nnc)
ADD_COMPILE_OPTIONS(-Wall)

SET(CMAKE_BUILD_TYPE Debug)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF()

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    ADD_COMPILE_OPTIONS(-Wno-switch)
    ADD_COMPILE_OPTIONS(-Wno-unused-variable)
    ADD_COMPILE_OPTIONS(-Wno-unused-function)
ENDIF()

IF (CMAKE_BUILD_TYPE STREQUAL "Release")
    ADD_COMPILE_OPTIONS(-O3)
ENDIF()

# BUILD NNC ITSELF
FILE(GLOB nnc_star_c ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${nnc_star_c})

# BUILD NNC LINUX_x86_64 DEPS AND INTRIN_x86_64 LIBRARIES
FILE(GLOB nnc_deps_impl_s ${CMAKE_CURRENT_SOURCE_DIR}/deps_impl_x86_64.s)
FILE(GLOB nnc_intrin_impl_s ${CMAKE_CURRENT_SOURCE_DIR}/intrin_impl_x86_64.s)
ENABLE_LANGUAGE(ASM)

ADD_LIBRARY(nnc_deps_x86_64 STATIC ${nnc_deps_impl_s})
ADD_LIBRARY(nnc_intrin_x86_64 STATIC ${nnc_intrin_impl_s})